Opened 12 years ago
Closed 12 years ago
#3763 closed defect (fixed)
Program detection in transport stream broken, part 3
| Reported by: | Carl Eugen Hoyos | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avformat |
| Version: | git-master | Keywords: | mpegts regression |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
http://samples.ffmpeg.org/ffmpeg-bugs/trac/ticket2471/
The sample from ticket #2471 contains two programs, streams are only assigned to one program. This is a regression since 4c41fc8
Might be related to ticket #2441.
$ ffmpeg -analyzeduration 2G -probesize 2G -i part.ts
ffmpeg version N-64623-g15e933b Copyright (c) 2000-2014 the FFmpeg developers
built on Jul 11 2014 22:22:11 with gcc 4.7 (SUSE Linux)
configuration: --enable-gpl
libavutil 52. 92.100 / 52. 92.100
libavcodec 55. 69.100 / 55. 69.100
libavformat 55. 45.100 / 55. 45.100
libavdevice 55. 13.102 / 55. 13.102
libavfilter 4. 10.100 / 4. 10.100
libswscale 2. 6.100 / 2. 6.100
libswresample 0. 19.100 / 0. 19.100
libpostproc 52. 3.100 / 52. 3.100
[mp3 @ 0x2849060] Header missing
Last message repeated 5 times
[mpeg2video @ 0x2849bc0] Invalid frame dimensions 0x0.
[mp3 @ 0x2849060] Header missing
Last message repeated 1 times
[mpeg2video @ 0x2849bc0] Invalid frame dimensions 0x0.
[mp3 @ 0x2849060] Header missing
[mpeg2video @ 0x2849bc0] Invalid frame dimensions 0x0.
[mp3 @ 0x2849060] Header missing
[mpeg2video @ 0x2849bc0] Invalid frame dimensions 0x0.
[mp3 @ 0x2849060] Header missing
Last message repeated 1 times
[mpeg2video @ 0x2849bc0] Invalid frame dimensions 0x0.
[mp3 @ 0x2849060] Header missing
[mpeg2video @ 0x2849bc0] Invalid frame dimensions 0x0.
Last message repeated 1 times
[mp3 @ 0x2849060] Header missing
Last message repeated 6 times
[mpeg2video @ 0x2849bc0] Invalid frame dimensions 0x0.
[mp3 @ 0x2849060] Header missing
Last message repeated 1880 times
[mpegts @ 0x1c529a0] PES packet size mismatch
Last message repeated 1 times
[mp3 @ 0x2849060] Header missing
[mpegts @ 0x1c529a0] decoding for stream 4 failed
[mpegts @ 0x1c529a0] PES packet size mismatch
[mpegts @ 0x1c529a0] Could not find codec parameters for stream 3 (Unknown: none ([11][0][0][0] / 0x000B)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x1c529a0] Could not find codec parameters for stream 4 (Audio: mp3 ([6][0][0][0] / 0x0006), 0 channels, s16p): unspecified frame size
Consider increasing the value for the 'analyzeduration' and 'probesize' options
[mpegts @ 0x1c529a0] Could not find codec parameters for stream 7 (Unknown: none ([11][0][0][0] / 0x000B)): unknown codec
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, mpegts, from 'part.ts':
Duration: 00:00:37.94, start: 16149.459000, bitrate: 6632 kb/s
Program 544
Program 545
Program 546
Program 547
Program 548
Program 550
Program 551
Program 1057
Stream #0:5[0x207]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv), 720x576 [SAR 64:45 DAR 16:9], max. 15000 kb/s, 25 fps, 25 tbr, 90k tbn, 50 tbc
Stream #0:6[0x2d0](eng): Audio: mp2 ([4][0][0][0] / 0x0004), 48000 Hz, stereo, s16p, 255 kb/s
Stream #0:4[0x247](eng): Audio: mp3 ([6][0][0][0] / 0x0006), 0 channels, s16p
Stream #0:7[0x901]: Unknown: none ([11][0][0][0] / 0x000B)
Program 1058
Program 1059
Program 1060
No Program
Stream #0:0[0x200]: Video: mpeg2video (Main) ([2][0][0][0] / 0x0002), yuv420p(tv), 720x576 [SAR 64:45 DAR 16:9], max. 10000 kb/s, 25 fps, 25 tbr, 90k tbn, 50 tbc
Stream #0:1[0x28a](eng): Audio: mp2 ([4][0][0][0] / 0x0004), 48000 Hz, stereo, s16p, 255 kb/s
Stream #0:2[0x240](eng): Subtitle: dvb_teletext ([6][0][0][0] / 0x0006)
Stream #0:3[0x1388]: Unknown: none ([11][0][0][0] / 0x000B)
At least one output file must be specified
Change History (1)
comment:1 by , 12 years ago
| Reproduced by developer: | set |
|---|---|
| Resolution: | → fixed |
| Status: | new → closed |
Note:
See TracTickets
for help on using tickets.



Fixed in 4470a3eeafa97d20b1e68a6b40490f71da726adf