avformat/mpegts: dont clear programs during probing

Fixes Ticket 3763

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>